--- a/docs/latex/classspace_1_1_a_rchain_system.tex
+++ b/docs/latex/classspace_1_1_a_rchain_system.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, R
 \end{figure}
 
 
-Collaboration diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
