--- a/docs/latex/classspace_1_1_chain_system.tex
+++ b/docs/latex/classspace_1_1_chain_system.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::Chain\+System$<$ Particles, Interactions $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::Chain\+System$<$ Particles, Interactions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::Chain\+System$<$ Particles, Interactions $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::Chain\+System$<$ Particles, Interactions $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Chain\+System$<$ Particles, Interactions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
