--- a/docs/latex/classspace_1_1_point_particles.tex
+++ b/docs/latex/classspace_1_1_point_particles.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1_point_particles}\index{space::PointParticles$<$ TypeSystem $>$@{space::PointParticles$<$ TypeSystem $>$}}
 
 
-Inheritance diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
