--- a/docs/latex/classspace_1_1_r_m_s.tex
+++ b/docs/latex/classspace_1_1_r_m_s.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::R\+MS$<$ T $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::R\+MS$<$ T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::R\+MS$<$ T $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::R\+MS$<$ T $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::R\+MS$<$ T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
