--- a/docs/latex/classspace_1_1_simple_system.tex
+++ b/docs/latex/classspace_1_1_simple_system.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+
 \end{figure}
 
 
-Collaboration diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -100,7 +98,7 @@ C\+R\+T\+P\+\_\+\+I\+M\+PL {\bfseries impl\+\_\+mass}
 \subsubsection*{template$<$typename Particles, typename Interactions$>$\newline
 class space\+::\+Simple\+System$<$ Particles, Interactions $>$}
 
-
+\[ x^2 +1 =0 \] 
 \begin{DoxyTemplParams}{Template Parameters}
 {\em \mbox{\hyperlink{classspace_1_1_particles}{Particles}}} & \\
 \hline
