--- a/docs/latex/classspace_1_1_size_particles.tex
+++ b/docs/latex/classspace_1_1_size_particles.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
