--- a/docs/latex/classspace_1_1_tidal_force.tex
+++ b/docs/latex/classspace_1_1_tidal_force.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1_tidal_force}\index{space::TidalForce@{space::TidalForce}}
 
 
-Inheritance diagram for space\+::Tidal\+Force\+:
-\nopagebreak
+Inheritance diagram for space\+::Tidal\+Force\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::Tidal\+Force\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::Tidal\+Force\+:
-\nopagebreak
+Collaboration diagram for space\+::Tidal\+Force\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
