--- a/docs/latex/classspace_1_1integrator_1_1symplectic10th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic10th.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1integrator_1_1symplectic10th}\index{space::integrator::symplectic10th@{space::integrator::symplectic10th}}
 
 
-Inheritance diagram for space\+::integrator\+::symplectic10th\+:
-\nopagebreak
+Inheritance diagram for space\+::integrator\+::symplectic10th\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::integrator\+::symplectic10th\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::integrator\+::symplectic10th\+:
-\nopagebreak
+Collaboration diagram for space\+::integrator\+::symplectic10th\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
