--- a/docs/latex/classspace_1_1integrator_1_1symplectic8th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic8th.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1integrator_1_1symplectic8th}\index{space::integrator::symplectic8th@{space::integrator::symplectic8th}}
 
 
-Inheritance diagram for space\+::integrator\+::symplectic8th\+:
-\nopagebreak
+Inheritance diagram for space\+::integrator\+::symplectic8th\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::integrator\+::symplectic8th\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::integrator\+::symplectic8th\+:
-\nopagebreak
+Collaboration diagram for space\+::integrator\+::symplectic8th\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
