--- a/docs/latex/classspace_1_1interactions_1_1_newtonian_grav.tex
+++ b/docs/latex/classspace_1_1interactions_1_1_newtonian_grav.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1interactions_1_1_newtonian_grav}\index{space::interactions::NewtonianGrav@{space::interactions::NewtonianGrav}}
 
 
-Inheritance diagram for space\+::interactions\+::Newtonian\+Grav\+:
-\nopagebreak
+Inheritance diagram for space\+::interactions\+::Newtonian\+Grav\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::interactions\+::Newtonian\+Grav\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::interactions\+::Newtonian\+Grav\+:
-\nopagebreak
+Collaboration diagram for space\+::interactions\+::Newtonian\+Grav\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
