--- a/docs/latex/classspace_1_1interactions_1_1_post_newtonian_grav.tex
+++ b/docs/latex/classspace_1_1interactions_1_1_post_newtonian_grav.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+
 \end{figure}
 
 
-Collaboration diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
