--- a/docs/latex/classspace_1_1ode_iterator_1_1_burlish_stoer.tex
+++ b/docs/latex/classspace_1_1ode_iterator_1_1_burlish_stoer.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+C
 \end{figure}
 
 
-Collaboration diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
