--- a/docs/latex/struct_space_h_1_1_lazy_1_1_binary___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_binary___expr.tex
@@ -2,8 +2,7 @@
 \label{struct_space_h_1_1_lazy_1_1_binary___expr}\index{SpaceH::Lazy::Binary\_Expr$<$ Operator, Lhs, Rhs $>$@{SpaceH::Lazy::Binary\_Expr$<$ Operator, Lhs, Rhs $>$}}
 
 
-Inheritance diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:
-\nopagebreak
+Inheritance diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, R
 \end{figure}
 
 
-Collaboration diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:
-\nopagebreak
+Collaboration diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
