--- a/docs/latex/struct_space_h_1_1_lazy_1_1_larray.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_larray.tex
@@ -2,8 +2,7 @@
 \label{struct_space_h_1_1_lazy_1_1_larray}\index{SpaceH::Lazy::Larray$<$ T, Len, IsSmall $>$@{SpaceH::Lazy::Larray$<$ T, Len, IsSmall $>$}}
 
 
-Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:
-\nopagebreak
+Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:
 \end{figure}
 
 
-Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:
-\nopagebreak
+Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
