--- a/docs/latex/struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4.tex
@@ -2,8 +2,7 @@
 \label{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4}\index{SpaceH::Lazy::Larray$<$ T, Len, true $>$@{SpaceH::Lazy::Larray$<$ T, Len, true $>$}}
 
 
-Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:
-\nopagebreak
+Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:
 \end{figure}
 
 
-Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:
-\nopagebreak
+Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
