--- a/docs/latex/struct_space_h_1_1_lazy_1_1_slice___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_slice___expr.tex
@@ -2,8 +2,7 @@
 \label{struct_space_h_1_1_lazy_1_1_slice___expr}\index{SpaceH::Lazy::Slice\_Expr$<$ T, Begin, End, Stride, SrcSize $>$@{SpaceH::Lazy::Slice\_Expr$<$ T, Begin, End, Stride, SrcSize $>$}}
 
 
-Inheritance diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:
-\nopagebreak
+Inheritance diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, St
 \end{figure}
 
 
-Collaboration diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:
-\nopagebreak
+Collaboration diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
