--- a/docs/latex/struct_space_h_1_1_lazy_1_1_unary___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_unary___expr.tex
@@ -2,8 +2,7 @@
 \label{struct_space_h_1_1_lazy_1_1_unary___expr}\index{SpaceH::Lazy::Unary\_Expr$<$ Operator, Unary $>$@{SpaceH::Lazy::Unary\_Expr$<$ Operator, Unary $>$}}
 
 
-Inheritance diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:
-\nopagebreak
+Inheritance diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $
 \end{figure}
 
 
-Collaboration diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:
-\nopagebreak
+Collaboration diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
