--- a/docs/latex/structspace_1_1_coords.tex
+++ b/docs/latex/structspace_1_1_coords.tex
@@ -6,8 +6,7 @@
 
 
 
-Collaboration diagram for space\+::Coords$<$ T $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Coords$<$ T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
