--- a/docs/latex/structspace_1_1_size_particles_1_1_particle.tex
+++ b/docs/latex/structspace_1_1_size_particles_1_1_particle.tex
@@ -2,8 +2,7 @@
 \label{structspace_1_1_size_particles_1_1_particle}\index{space::SizeParticles$<$ TypeSystem $>$::Particle@{space::SizeParticles$<$ TypeSystem $>$::Particle}}
 
 
-Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:
-\nopagebreak
+Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle
 \end{figure}
 
 
-Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:
-\nopagebreak
+Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
