--- a/docs/latex/structspace_1_1_vec3.tex
+++ b/docs/latex/structspace_1_1_vec3.tex
@@ -11,8 +11,7 @@ Self 3D vector class.
 
 
 
-Collaboration diagram for space\+::Vec3$<$ T $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Vec3$<$ T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
