--- a/docs/latex/structspace_1_1is__container.tex
+++ b/docs/latex/structspace_1_1is__container.tex
@@ -2,8 +2,7 @@
 \label{structspace_1_1is__container}\index{space::is\_container$<$ T, \_ $>$@{space::is\_container$<$ T, \_ $>$}}
 
 
-Inheritance diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
