--- a/docs/latex/structspace_1_1orbit_1_1_hyper_orbit_args.tex
+++ b/docs/latex/structspace_1_1orbit_1_1_hyper_orbit_args.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::orbit\+::Hyper\+Orbit\+Args$<$ Real $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::orbit\+::Hyper\+Orbit\+Args$<$ Real $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::orbit\+::Hyper\+Orbit\+Args$<$ Real $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::orbit\+::Hyper\+Orbit\+Args$<$ Real $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::orbit\+::Hyper\+Orbit\+Args$<$ Real $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
