--- a/docs/latex/structspace_1_1orbit_1_1_orbit_args.tex
+++ b/docs/latex/structspace_1_1orbit_1_1_orbit_args.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::orbit\+::Orbit\+Args$<$ Real $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::orbit\+::Orbit\+Args$<$ Real $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
