--- a/docs/latex/classspace_1_1_p_i_d_controller.tex
+++ b/docs/latex/classspace_1_1_p_i_d_controller.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
