--- a/docs/latex/classspace_1_1_regularized_system.tex
+++ b/docs/latex/classspace_1_1_regularized_system.tex
@@ -11,8 +11,7 @@ Regularized particle System.
 
 
 
-Inheritance diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for space\+::Regularized\+System$<$ Particles, Interactions,
 \end{figure}
 
 
-Collaboration diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
