--- a/docs/latex/classspace_1_1integrator_1_1symplectic2nd.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic2nd.tex
@@ -2,8 +2,7 @@
 \label{classspace_1_1integrator_1_1symplectic2nd}\index{space::integrator::symplectic2nd@{space::integrator::symplectic2nd}}
 
 
-Inheritance diagram for space\+::integrator\+::symplectic2nd\+:
-\nopagebreak
+Inheritance diagram for space\+::integrator\+::symplectic2nd\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::integrator\+::symplectic2nd\+:
 \end{figure}
 
 
-Collaboration diagram for space\+::integrator\+::symplectic2nd\+:
-\nopagebreak
+Collaboration diagram for space\+::integrator\+::symplectic2nd\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
