--- a/docs/latex/classspace_1_1ode_iterator_1_1_const_ode_iterator.tex
+++ b/docs/latex/classspace_1_1ode_iterator_1_1_const_ode_iterator.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integr
 \end{figure}
 
 
-Collaboration diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
