--- a/docs/latex/structspace_1_1_kahan.tex
+++ b/docs/latex/structspace_1_1_kahan.tex
@@ -11,8 +11,7 @@
 
 
 
-Collaboration diagram for space\+::Kahan$<$ T $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Kahan$<$ T $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
