--- a/docs/latex/structspace_1_1_point_particle.tex
+++ b/docs/latex/structspace_1_1_point_particle.tex
@@ -6,8 +6,7 @@
 
 
 
-Collaboration diagram for space\+::Point\+Particle$<$ Real $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::Point\+Particle$<$ Real $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
