--- a/docs/latex/structspace_1_1is__container_3_01_t_00_01std_1_1conditional__t_3_01false_00_01is__container__helcfd49663b99169f905a0b919fe8283f9.tex
+++ b/docs/latex/structspace_1_1is__container_3_01_t_00_01std_1_1conditional__t_3_01false_00_01is__container__helcfd49663b99169f905a0b919fe8283f9.tex
@@ -2,8 +2,7 @@
 \label{structspace_1_1is__container_3_01_t_00_01std_1_1conditional__t_3_01false_00_01is__container__helcfd49663b99169f905a0b919fe8283f9}\index{space::is\_container$<$ T, std::conditional\_t$<$ false, is\_container\_helper$<$ typename T::value\_type, typename T::size\_type, typename T::iterator, typename T::const\_iterator, decltype(std::declval$<$ T $>$().size()), decltype(std::declval$<$ T $>$().begin()), decltype(std::declval$<$ T $>$().end()) $>$, void $>$ $>$@{space::is\_container$<$ T, std::conditional\_t$<$ false, is\_container\_helper$<$ typename T::value\_type, typename T::size\_type, typename T::iterator, typename T::const\_iterator, decltype(std::declval$<$ T $>$().size()), decltype(std::declval$<$ T $>$().begin()), decltype(std::declval$<$ T $>$().end()) $>$, void $>$ $>$}}
 
 
-Inheritance diagram for space\+::is\+\_\+container$<$ T, std\+::conditional\+\_\+t$<$ false, is\+\_\+container\+\_\+helper$<$ typename T\+::value\+\_\+type, typename T\+::size\+\_\+type, typename T\+::iterator, typename T\+::const\+\_\+iterator, decltype(std\+::declval$<$ T $>$().size()), decltype(std\+::declval$<$ T $>$().begin()), decltype(std\+::declval$<$ T $>$().end()) $>$, void $>$ $>$\+:
-\nopagebreak
+Inheritance diagram for space\+::is\+\_\+container$<$ T, std\+::conditional\+\_\+t$<$ false, is\+\_\+container\+\_\+helper$<$ typename T\+::value\+\_\+type, typename T\+::size\+\_\+type, typename T\+::iterator, typename T\+::const\+\_\+iterator, decltype(std\+::declval$<$ T $>$().size()), decltype(std\+::declval$<$ T $>$().begin()), decltype(std\+::declval$<$ T $>$().end()) $>$, void $>$ $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for space\+::is\+\_\+container$<$ T, std\+::conditional\+\_\
 \end{figure}
 
 
-Collaboration diagram for space\+::is\+\_\+container$<$ T, std\+::conditional\+\_\+t$<$ false, is\+\_\+container\+\_\+helper$<$ typename T\+::value\+\_\+type, typename T\+::size\+\_\+type, typename T\+::iterator, typename T\+::const\+\_\+iterator, decltype(std\+::declval$<$ T $>$().size()), decltype(std\+::declval$<$ T $>$().begin()), decltype(std\+::declval$<$ T $>$().end()) $>$, void $>$ $>$\+:
-\nopagebreak
+Collaboration diagram for space\+::is\+\_\+container$<$ T, std\+::conditional\+\_\+t$<$ false, is\+\_\+container\+\_\+helper$<$ typename T\+::value\+\_\+type, typename T\+::size\+\_\+type, typename T\+::iterator, typename T\+::const\+\_\+iterator, decltype(std\+::declval$<$ T $>$().size()), decltype(std\+::declval$<$ T $>$().begin()), decltype(std\+::declval$<$ T $>$().end()) $>$, void $>$ $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
