--- a/draw.ipynb
+++ b/draw.ipynb
@@ -179,6 +179,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tests</th>\n",
+       "      <th>failures</th>\n",
+       "      <th>disabled</th>\n",
+       "      <th>errors</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>time</th>\n",
+       "      <th>name</th>\n",
+       "      <th>testsuites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-10-17 02:02:15</td>\n",
+       "      <td>6.042s</td>\n",
+       "      <td>AllTests</td>\n",
+       "      <td>{'name': 'VectorTest', 'tests': 15, 'failures'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-10-17 02:02:15</td>\n",
+       "      <td>6.042s</td>\n",
+       "      <td>AllTests</td>\n",
+       "      <td>{'name': 'MathTest', 'tests': 3, 'failures': 0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-10-17 02:02:15</td>\n",
+       "      <td>6.042s</td>\n",
+       "      <td>AllTests</td>\n",
+       "      <td>{'name': 'Chain', 'tests': 1, 'failures': 0, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-10-17 02:02:15</td>\n",
+       "      <td>6.042s</td>\n",
+       "      <td>AllTests</td>\n",
+       "      <td>{'name': 'ParticleTest', 'tests': 8, 'failures...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-10-17 02:02:15</td>\n",
+       "      <td>6.042s</td>\n",
+       "      <td>AllTests</td>\n",
+       "      <td>{'name': 'CoordsTest', 'tests': 5, 'failures':...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tests  failures  disabled  errors           timestamp    time      name  \\\n",
+       "0     32         0         0       0 2019-10-17 02:02:15  6.042s  AllTests   \n",
+       "1     32         0         0       0 2019-10-17 02:02:15  6.042s  AllTests   \n",
+       "2     32         0         0       0 2019-10-17 02:02:15  6.042s  AllTests   \n",
+       "3     32         0         0       0 2019-10-17 02:02:15  6.042s  AllTests   \n",
+       "4     32         0         0       0 2019-10-17 02:02:15  6.042s  AllTests   \n",
+       "\n",
+       "                                          testsuites  \n",
+       "0  {'name': 'VectorTest', 'tests': 15, 'failures'...  \n",
+       "1  {'name': 'MathTest', 'tests': 3, 'failures': 0...  \n",
+       "2  {'name': 'Chain', 'tests': 1, 'failures': 0, '...  \n",
+       "3  {'name': 'ParticleTest', 'tests': 8, 'failures...  \n",
+       "4  {'name': 'CoordsTest', 'tests': 5, 'failures':...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_json('unit_test.json')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -201,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
