--- a/draw.ipynb
+++ b/draw.ipynb
@@ -301,6 +301,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[Decimal('17.7738089140780001')]\n",
+      "[Decimal('44.7509303845559956'), Decimal('8.06593864838188711')]\n",
+      "[Decimal('55.5095216749226990'), Decimal('19.5740293777069740'), Decimal('5.80100155926406203')]\n",
+      "[Decimal('52.1625022561530086'), Decimal('28.5409022679298974'), Decimal('14.0104739330160323'), Decimal('5.14062410581093269')]\n",
+      "[Decimal('50.8080910907447823'), Decimal('37.3038175637124454'), Decimal('25.2900342103279857'), Decimal('14.0099072392295156'), Decimal('5.34597689987110987')]\n",
+      "[Decimal('70.9853803416487238'), Decimal('62.8448441358017857'), Decimal('52.1020450666394484'), Decimal('36.7361232269326420'), Decimal('19.5691943377340430'), Decimal('6.61766201370242153')]\n",
+      "[Decimal('230.858165231426694'), Decimal('225.668615322657309'), Decimal('207.899029180855733'), Decimal('165.753721732680303'), Decimal('103.578820531755137'), Decimal('44.5769049331641529'), Decimal('10.8460261902368476')]\n",
+      "[Decimal('6434.99999999999963'), Decimal('6434.99999999999963'), Decimal('6072.95042294490566'), Decimal('4978.35763782946284'), Decimal('3222.86568410166117'), Decimal('1459.46303786913099'), Decimal('387.910422195894980'), Decimal('44.4851999286718368')]\n",
+      "17.7738089140780001\n",
+      "5.54813671853721662\n",
+      "2.83587607864443884\n",
+      "1.82764026751759770\n",
+      "1.36200781606246958\n",
+      "1.12953387533678987\n",
+      "1.02299632982348675\n",
+      "1\n",
+      "[]\n",
+      "[Decimal('17.7738089140780001')]\n",
+      "[Decimal('44.7509303845559956'), Decimal('8.06593864838188711')]\n",
+      "[Decimal('55.5095216749226990'), Decimal('19.5740293777069740'), Decimal('5.80100155926406203')]\n",
+      "[Decimal('52.1625022561530086'), Decimal('28.5409022679298974'), Decimal('14.0104739330160323'), Decimal('5.14062410581093269')]\n",
+      "[Decimal('50.8080910907447823'), Decimal('37.3038175637124454'), Decimal('25.2900342103279857'), Decimal('14.0099072392295156'), Decimal('5.34597689987110987')]\n",
+      "[Decimal('70.9853803416487238'), Decimal('62.8448441358017857'), Decimal('52.1020450666394484'), Decimal('36.7361232269326420'), Decimal('19.5691943377340430'), Decimal('6.61766201370242153')]\n",
+      "[Decimal('230.858165231426694'), Decimal('225.668615322657309'), Decimal('207.899029180855733'), Decimal('165.753721732680303'), Decimal('103.578820531755137'), Decimal('44.5769049331641529'), Decimal('10.8460261902368476')]\n",
+      "[Decimal('6434.99999999999963'), Decimal('6434.99999999999963'), Decimal('6072.95042294490566'), Decimal('4978.35763782946284'), Decimal('3222.86568410166117'), Decimal('1459.46303786913099'), Decimal('387.910422195894980'), Decimal('44.4851999286718368')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import *\n",
+    "getcontext().prec = 18\n",
+    "\n",
+    "sub_steps = [0, 5.62625605369221465e-02, 1.80240691736892365e-01, 3.52624717113169637e-01, 5.47153626330555383e-01, 7.34210177215410532e-01, 8.85320946839095768e-01, 9.77520613561287502e-01, 1]\n",
+    "p_step = [Decimal(h) for h in sub_steps]\n",
+    "\n",
+    "def gen_c(p_step):\n",
+    "    l=[]\n",
+    "    size = len(p_step)\n",
+    "    for i in range(size):\n",
+    "        x =[]\n",
+    "        for j in range(i):\n",
+    "            x.append(Decimal(1))\n",
+    "            for k in range(len(x)):\n",
+    "                x[k]=x[k]/(p_step[i]-p_step[j])\n",
+    "        l.append(x)\n",
+    "            \n",
+    "    return l\n",
+    "        \n",
+    "l=gen_c(p_step) \n",
+    "for i in l:\n",
+    "    print(i)\n",
+    "pos_cof = [Decimal(1.0), Decimal(1)/Decimal(2), Decimal(1)/Decimal(3), Decimal(1)/Decimal(2), Decimal(3)/Decimal(5), Decimal(2)/Decimal(3), Decimal(5)/Decimal(7), Decimal(3)/Decimal(4), Decimal(7)/Decimal(9)]\n",
+    "vel_cof = [Decimal(1.0), Decimal(1)/Decimal(2), Decimal(2)/Decimal(3), Decimal(3)/Decimal(4), Decimal(4)/Decimal(5), Decimal(5)/Decimal(6), Decimal(6)/Decimal(7), Decimal(7)/Decimal(8)]\n",
+    "\n",
+    "def tab(h, cof):\n",
+    "    s = 1\n",
+    "    for x in cof:\n",
+    "        print(\"{:.18E}\".format( s*x*h),',',end='')\n",
+    "        s*=x*h\n",
+    "\n",
+    "for p in p_step:\n",
+    "    if p != 0:\n",
+    "        print(Decimal(1)/p)\n",
+    "for xx in l:\n",
+    "    print(xx)\n",
+    "\n",
+    "#for p in p_step:\n",
+    "#    tab(p, pos_cof)\n",
+    "#    print('\\n')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013888888888888888"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/72"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -323,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
